fixed stretched images and companalysis space

--- a/css/styleproject.css
+++ b/css/styleproject.css
@@ -81,6 +81,7 @@ button.blue {
 }
 button.blue:hover {
 	letter-spacing: .05rem;
+	transition: .5s;
 }
 .buttonContainer {
 	display: grid;
@@ -879,12 +880,15 @@ button a {
 	}
 	.compList1 {
 		grid-column: 2;
+		padding-top: 5rem;
 	}
 	.compList2 {
 		grid-column: 3;
+		padding-top: 5rem;
 	}
 	.compList3 {
 		grid-column: 4;
+		padding-top: 5rem;
 	}
 	.compList4 {
 		grid-column: 3;
